refactored & bugfixed Simplification algorithm